Added ordered list in file.
Added ordered list (<ol> tags) of favourite websites in file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>My awesome web page</title>
   </head>  
   <body>
+    <ol>
+      <li>w3school</li>
+      <li>udemy</li>
+      <li>wikipedia</li>
+    </ol>    
     <h1>I'm a header 1!</h1>
     <img src="https://avatars.githubusercontent.com/u/84316451?v=4">
     Hello there, awesome person!
